--- a/pendidikan.html
+++ b/pendidikan.html
@@ -104,10 +104,10 @@ Signature
 			</div>
 			<div class="bawah">
 			<div class="isi-1">
-				<iframe src="https://www.youtube.com/embed/SJPWkdduwEc"></iframe>
+				<iframe src="https://www.youtube.com/embed/XBYuo5QdV4k"></iframe>
 				</div>
 			<div class="isi-1">
-				<iframe src="https://www.youtube.com/embed/owPUckz1uIs"></iframe>
+				<iframe src="https://www.youtube.com/embed/hvoHdMR1XRI"></iframe>
 				</div>
 			</div>
 			<div class="artikel-1">
