--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<li class="menu">BERANDA</li>
 		<li id="open-artikel" class="menu">ARTIKEL
 			<ul id="menu-lagi">
-				<li class="tulisan">Pendidikan</li>
+				<a href="pendidikan.html"><li class="tulisan">Pendidikan</li></a>
 				<li class="tulisan">Remaja</li>
 				<li class="tulisan">Teknologi</li>
 				<li class="tulisan">Alam</li>
