--- a/pendidikan.html
+++ b/pendidikan.html
@@ -14,7 +14,7 @@
 	<h1 id="nama">PUTRA</h1>
 	<div class="menu-bar">
 	<ul id="daftar-menu">
-		<li class="menu">BERANDA</li>
+		<a href="index.html.html"><li class="menu">BERANDA</li></a>
 		<li id="open-artikel" class="menu">ARTIKEL
 			<ul id="menu-lagi">
 				<li class="tulisan">Pendidikan</li>
